--- a/queriesmedia.css
+++ b/queriesmedia.css
@@ -99,11 +99,15 @@
 
 footer{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     gap: 40px;
     padding: 40px 5%;
     background-color: var(--dark);
     color: #fff;
+    font-size: 10px;
 }
 
 
