--- a/queriesmedia.css
+++ b/queriesmedia.css
@@ -117,6 +117,9 @@ footer{
     font-size: 10px;
 }
 
+article h2{
+    text-align: center;
+}
 
 }
 
@@ -128,6 +131,8 @@ footer{
     .howDesktop:hover{
         border-radius: 50%;
        background-color: #ff6b35;
+       padding: 5px;
+       cursor: pointer;
     }
     
 }
