--- a/queriesmedia.css
+++ b/queriesmedia.css
@@ -3,6 +3,17 @@
         display: none;
     }
 
+    .map{
+        width: 100%;
+        height: 300px;
+    }
+
+    .mapa h2{
+        text-align: center;
+        margin-bottom: 20px;
+        font-size: 20px;
+    }
+
     .slidebar{
        backdrop-filter: blur(14px);
     }
