--- a/style.css
+++ b/style.css
@@ -492,3 +492,156 @@ footer{
     }
 }
 
+
+/*Modal*/
+
+/* Fundo escuro atrás do dialog */
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.774);
+}
+
+/* Dialog */
+dialog {
+  border: none;
+  border-radius: 16px;
+  width: 90%;
+  max-width: 420px;
+  padding: 0;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+     position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+  animation: modalIn 0.3s ease;
+    overflow: hidden;
+
+}
+
+/* Conteúdo */
+.content {
+  padding: 24px;
+  background: #fff;
+  color: #333;
+}
+
+/* Título */
+.content h2 {
+  text-align: center;
+  margin-bottom: 12px;
+  font-size: 1.6rem;
+  color: var(--primary-color);
+}
+
+/* Texto */
+.content p {
+  font-size: 0.95rem;
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+
+/* Linha */
+.content hr {
+  border: none;
+  height: 1px;
+  background: #eee;
+  margin: 16px 0;
+}
+
+/* Input quantidade */
+.content input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  margin-top: 6px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
+
+/* Extras */
+.extras {
+  
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 14px;
+  
+}
+
+.totalpay{
+    margin-top: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    color: var(--green);
+}
+
+.extras-list{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    
+}
+
+.extras label {
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+/* Ações */
+.acoes {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* Botão comprar */
+dialog .btn {
+  text-align: center;
+  color: #fff;
+  padding: 12px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+dialog .btn:hover {
+  background: #b81f1f;
+}
+
+/* Botão fechar */
+.acoes button {
+  background: transparent;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.acoes button:hover {
+  background: #f2f2f2;
+}
+
+/* Info final */
+.info {
+  margin-top: 14px;
+  font-size: 0.85rem;
+  color: #777;
+  text-align: center;
+}
+
+/* Animação */
+@keyframes modalIn {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(20);
+    opacity: 1;
+  }
+}
